# llmbench

./: .gitignore  LICENSE  README.md  benchmark_results.md  main.py  pyproject.toml
src/cli/: benchmark.py  formatters.py  main.py  models.py
src/core/: constants.py  exceptions.py
src/core/api/: client.py  prompts.py
src/core/utils/: latency.py  speed.py
tests/: test_models.py
